Refactoring with Boostrap

--- a/index.html
+++ b/index.html
@@ -1,1 +1,215 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Damien Despas - Curriculum Vitae</title>
+</head>
+
+<body>
+    <header class="navbar navbar-expand-sm sticky-top navbar-dark bg-dark bg-gradient shadow p-1">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img class="rounded me-2" src="img/profile.jpg" alt="" width="32"
+                    height="32" class="d-inline-block align-text-top"> Damien Despas</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Mon CV</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="row">
+        <div class="col-4 col-lg-3 col-xxl-2">
+            <nav id="navbar" class="navbar sticky-top navbar-light bg-light flex-column align-items-stretch p-3 shadow" style="top: 51px;">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item text-center"><i class="bi bi-globe"></i> Zurich, Suisse</li>
+                    <br>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading1">Formation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading2">Fonctions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading3">Parcours Recherche</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading4">Enseignement</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading5">Publications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading6">Parcours Associatif</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#scrollspyHeading7">Divers</a>
+                    </li>
+                    <br>
+                    <li class="nav-item text-center"><a class="link-dark" href="https://www.linkedin.com/in/despas/"><i class="bi bi-linkedin"></i></a> <a class="link-dark" href="https://github.com/d-despas"><i class="bi bi-github"></i></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-8 col-lg-7 offset-lg-1 col-xxl-6" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0"><br>
+            <h4 id="scrollspyHeading1">FORMATION</h4>
+            <br>
+            <h6><span class="text-danger">2022-actuellement :</span> Post-Graduate Certificate - Computer Science</h6>
+            <p>&emsp;University of London</p>
+            <h6><span class="text-danger">2019 :</span> Online Certificate Course - Applied Data Science</h6>
+            <p>&emsp;EMERITUS and Columbia Engineering</p>
+            <h6><span class="text-danger">2018-2019 :</span> Diplôme d’Etudes Supérieures Universitaires - Informatique
+                et Information Médicale</h6>
+            <p>&emsp;Aix-Marseille Université</p>
+            <h6><span class="text-danger">2016-2017 :</span> Diplôme d'Université - Maladies Parasitaires et Tropicale
+            </h6>
+            <p>&emsp;Université Pierre et Marie Curie - Paris VI</p>
+            <h6><span class="text-danger">2015-2016 :</span> Diplôme d'Université - Prise en Charge de l’Infection par
+                le VIH, des Hépatites Chroniques B et C et des Infections Sexuellement Transmissibles</h6>
+            <p>&emsp;Université de Bordeaux</p>
+            <h6><span class="text-danger">2015 :</span> Thèse pour le Diplôme d’Etat de Docteur en Médecine</h6>
+            <p>&emsp;Université de Bordeaux<br>
+                &emsp;Sujet : « Insuffisance de renseignements cliniques sur les prescriptions de biologie médicale.
+                Points de vue croisés des prescripteurs et des biologistes. »<br>
+                &emsp;Directeur : Dr. J.-M. Pontaut<br>
+                &emsp;Mention Très Honorable avec les Félicitations du Jury.</p>
+            <h6><span class="text-danger">2014-2015 :</span> Diplôme d'Université - Thérapeutique Anti-Infectieuse</h6>
+            <p>&emsp;Université de Bordeaux</p>
+            <h6><span class="text-danger">2012-2015 :</span> Diplôme d'Etudes Spécialisées - Médecine Générale</h6>
+            <p>&emsp;Université Victor Segalen Bordeaux II</p>
+            <h6><span class="text-danger">2010-2012 :</span> Diplôme d'Etudes Spécialisées - Biologie Médicale</h6>
+            <p>&emsp;Université Victor Segalen Bordeaux II</p>
+            <h6><span class="text-danger">2010 :</span> Examen National Classant</h6>
+            <h6><span class="text-danger">2003-2010 :</span> 1er et 2ème Cycles des Etudes Médicales</h6>
+            <p>&emsp;Université de Poitiers</p>
+            <h6><span class="text-danger">2003 :</span> Baccalauréat Scientifique, Mention AB, Spécialité Mathématiques.
+            </h6>
+            <p>&emsp;Lycée Marcelin Berthelot (Châtellerault)</p>
+            <br>
+            <h4 id="scrollspyHeading2">FONCTIONS</h4>
+            <br>
+            <h6><span class="text-info">2021-actuellement :</span> Senior Medical Knowledge Engineer | Technology Lead
+                HIS Kreuzlingen Site</h6>
+            <p>&emsp;3M (Schweiz) GmbH - Kreuzlingen</p>
+            <h6><span class="text-info">2017-2021 :</span> Medical Knowledge Engineer</h6>
+            <p>&emsp;3M (Schweiz) GmbH - Kreuzlingen</p>
+            <h6><span class="text-info">2016-2017 :</span>
+                Assistant Spécialiste - Service de Médecine Interne</h6>
+            <p>&emsp;Hopital Robert Boulin - Dr. O. Caubet (CH de Libourne)</p>
+            <h6><span class="text-info">2015-2016 :</span> Médecin de Prélèvement</h6>
+            <p>&emsp;Etablissement Français du Sang Aquitaine Limousin</p>
+            <h6><span class="text-info">2015 :</span> Praticien Hospitalier Contractuel - Service de Médecine
+                Interne</h6>
+            <p>&emsp;Centre Hospitalier Intercommunal Marmande</p>
+            <h5>Interne en Médecine Générale</h5>
+            <h6><span class="text-info">2015 :</span> Interne en Médecine Interne</h6>
+            <p>&emsp;Centre Hospitalier Intercommunal Marmande - Dr. C. Sarfati - Dr V. Naga</p>
+            <h6><span class="text-info">2015 :</span> Interne en Pédiatrie</h6>
+            <p>&emsp;Centre Hospitalier Intercommunal Marmande - Dr. Y. Callaud</p>
+            <h6><span class="text-info">2014-2015 :</span> Interne en Gynécologie</h6>
+            <p>&emsp;Centre Hospitalier Intercommunal Marmande - Dr. J.-R. Sassin</p>
+            <h6><span class="text-info">2014 :</span> Interne en Cardiologie</h6>
+            <p>&emsp;Centre Hospitalier Intercommunal Marmande - Dr. D. Agnola</p>
+            <h6><span class="text-info">2013-2014 :</span> Interne en Maladies Infectieuses et Tropicales
+            </h6>
+            <p>&emsp;Hôpital Pellegrin - Pr. D. Neau (CHU de Bordeaux)</p>
+            <h6><span class="text-info">2013 :</span> Interne aux Urgences - SMUR</h6>
+            <p>&emsp;Hôpital Samuel Pozzi - Dr. C. Idir (CH de Bergerac)</p>
+            <h6><span class="text-info">2012-2013 :</span> Stage chez le Praticien</h6>
+            <p>&emsp;Dr. J.-M. Pontaut (Pessac) - Dr. T. Delmeule (Mérignac)</p>
+            <h5>Interne en Biologie Médicale</h5>
+            <h6><span class="text-info">2012 :</span> Interne en Bactériologie</h6>
+            <p>&emsp;Hôpital Haut-Lévêque - Pr. F. Megraud (CHU de Bordeaux)</p>
+            <h6><span class="text-info">2011 :</span> Interne en Immunologie</h6>
+            <p>&emsp;Hôpital Pellegrin - Pr. J.-F. Moreau (CHU de Bordeaux)</p>
+            <h6><span class="text-info">2010-2011 :</span> Interne en Biochimie</h6>
+            <p>&emsp;Hôpital Haut-Lévêque - Pr. H. de Verneuil - Pr. P. Derache (CHU de Bordeaux)</p>
+            <h6><span class="text-info">2006-2010 :</span> Externe en Médecine</h6>
+            <p>&emsp;Hôpital Jean-Bernard (CHU de Poitiers)</p><br>
+            <h4 id="scrollspyHeading3">PARCOURS RECHERCHE</h4><br>
+            <h6><span class="text-success">2012 :</span> Master 2 - Biologie Santé - Nutrition Humaine et Santé, Mention
+                AB
+            </h6>
+            <p>&emsp;Université Bordeaux 1 - Université Bordeaux Segalen<br>
+                &emsp;Sujet : « Etude métabolomique sur le foie et l’intestin des effets du resvératrol et/ou de
+                l’éthanol, en fonction du microbiote : des doses modérées modifient-elles les effets d’une
+                insulinorésistance induite ? »<br>
+                &emsp;Centre de Résonance Magnétique des Systèmes Biologiques - CNRS UMR5536<br>
+                &emsp;Encadrant : Dr. M.-C. Beauvieux</p>
+            <h6><span class="text-success">2008 :</span> Master 1 - Physiopathologie, Molécules Bioactives et
+                Comportement
+            </h6>
+            <p>&emsp;Université de Poitiers<br>
+                &emsp;Sujet : « Etude de quelques marqueurs de différenciation et de prolifération dans les cirrhoses
+                hépatiques »<br>
+                &emsp;Service d'Anatomie et Cytologie Pathologiques - Unité INSERM U927<br>
+                &emsp;Encadrant : Pr. P.-M. Levillain</p>
+            <h6><span class="text-success">2006-2007 :</span> UE Mécanismes Fondamentaux de la Cancérogenèse (Université
+                de
+                Poitiers)</h6>
+            <h6><span class="text-success">2005-2006 :</span> UE Méthodologie en Anatomie Pathologique (Université de
+                Poitiers)</h6>
+            <h6><span class="text-success">2004-2005 :</span> UE Biologie Moléculaire de la Cellule (Université de
+                Poitiers)</h6><br>
+            <h4 id="scrollspyHeading4">ENSEIGNEMENT</h4><br>
+            <h6><span class="text-warning">2011-2013 :</span> Tutorat Internat Pharmacie (UFR Pharmacie - Victor Segalen
+                Bordeaux II)</h6>
+            <p>&emsp;Biochimie (14h de cours et 2h d’examens)</p>
+            <h6><span class="text-warning">2010-2011 :</span> UE INT-2 Biologie Internat (UFR Pharmacie - Victor Segalen
+                Bordeaux II)</h6>
+            <p>&emsp;Marqueurs Cardiaques (2h de cours)<br>
+                &emsp;Biologie du Métabolisme Osseux (2h de cours)</p>
+            <h6><span class="text-warning">2004-2005 :</span> Tuteur de Physiologie (UFR Médecine Pharmacie - Poitiers)
+            </h6>
+            <p>&emsp;24h de cours et 9h d’examens</p><br>
+            <h4 id="scrollspyHeading5">PUBLICATIONS</h4><br>
+            <p>D. Despas. Insuffisance de renseignements cliniques sur les prescriptions de biologie médicale : points
+                de vue croisés des prescripteurs et des biologistes. Médecine humaine et pathologie. 2015.
+                <a href="https://dumas.ccsd.cnrs.fr/dumas-01223401"
+                    target="_blank">https://dumas.ccsd.cnrs.fr/dumas-01223401</a>
+            </p>
+            <p>M.-C. Beauvieux, H. Gin, C. Castain, D. Despas, E. Richard, P. Couzigou, J.-L. Gallis. P2095 Effets du
+                fructose étudié par RMN en HRMAS du proton sur le foie de rat : le rapport choline/ phosphocholine
+                est-il un bon marqueur de la stéatose ? Diabetes & Metabolism. Volume 39, Supplement 1, 2013, Page A90.
+                ISSN 1262-3636. <a href="https://doi.org/10.1016/S1262-3636(13)72005-6"
+                    target="_blank">https://doi.org/10.1016/S1262-3636(13)72005-6</a></p><br>
+            <h4 id="scrollspyHeading6">PARCOURS ASSOCIATIF</h4><br>
+            <h6><span class="text-info">2013-2015 :</span> Syndicat des Internes en Médecine Générale d’Aquitaine
+                (S.I.M.G.A.)</h6>
+            <p>&emsp;Trésorier (2013-2015)</p>
+            <h6><span class="text-info">2010-2012 :</span> Association des Internes des Hôpitaux de Bordeaux (A.I.H.B.)
+            </h6>
+            <p>&emsp;Secrétaire (2010-2011)<br>
+                &emsp;Référent des Internes en Biologie Médicale (2011-2012)</p>
+            <h6><span class="text-info">2004-2007 :</span> Comité Régional des Étudiants en Médecine de Poitiers
+                (C.R.E.M.)</h6>
+            <p>&emsp;Vice-Président chargé de la Communication (2005-2007)<br>
+                &emsp;Webmaster (2004-2005)</p><br>
+            <h4 id="scrollspyHeading7">DIVERS</h4><br>
+            <p><strong>Langues :</strong> Français (langue maternelle), Anglais (quite well), Allemand (ein
+                bisschen).<br>
+                <strong>Informatique :</strong> Java, PHP, HTML, CSS, JavaScript, Groovy, Python, R, MySQL, MongoDB,
+                HSQLDB, Eclipse, Git, Docker, Confluence, Jira, Bootstrap, jQuery.<br>
+                <strong>Sport :</strong> Course à pied, Tennis, Danse (Claquettes, Be Bop, Lindy Hop, Charleston).<br>
+                <strong>Loisirs :</strong> Astronomie, Astrophysique, Guitare classique, Piano.
+            </p><br>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="module" src="js/script.js"></script>
+</body>
+
+</html>
