Improved layout on small screens

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img class="rounded me-2" src="img/profile.jpg" alt="" width="32"
                     height="32" class="d-inline-block align-text-top"> Damien Despas</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span></button>
+                <i class="bi bi-three-dots"></i></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -29,7 +29,7 @@
         </div>
     </header>
     <div class="row">
-        <div class="col-4 col-lg-3 col-xxl-2">
+        <div class="offcanvas-md col-md-3 col-xl-2">
             <nav id="navbar" class="navbar sticky-top navbar-light bg-light flex-column align-items-stretch p-3 shadow" style="top: 51px;">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item text-center"><i class="bi bi-globe"></i> Zurich, Suisse</li>
@@ -60,7 +60,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-8 col-lg-7 offset-lg-1 col-xxl-6" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0"><br>
+        <div class="col-10 offset-1 col-md-8 offset-md-0" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0"><br>
             <h4 id="scrollspyHeading1">FORMATION</h4>
             <br>
             <h6><span class="text-danger">2022-actuellement :</span> Post-Graduate Certificate - Computer Science</h6>
