--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
             </div>
             <div class="offcanvas-body d-md-none">
                 <ul class="nav nav-pills flex-column">
-                    <li class="nav-item"><i class="bi bi-globe"></i> Zurich, Suisse</li>
-                    <br>
+                    <div class="row">
+                        <div class="col-3 text-center"><a class="link-dark" href="https://www.linkedin.com/in/despas/"><i class="bi bi-linkedin"></i></a></div>
+                        <div class="col-6 text-center"><li class="nav-item"><i class="bi bi-globe"></i> Zurich, Suisse</li></div>
+                        <div class="col-3 text-center"><a class="link-dark" href="https://github.com/d-despas"><i class="bi bi-github"></i></a></div>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading1">Formation</a>
                     </li>
@@ -62,8 +65,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#scrollspyHeading7">Divers</a>
                     </li>
-                    <br>
-                    <li class="nav-item"><a class="link-dark" href="https://www.linkedin.com/in/despas/"><i class="bi bi-linkedin"></i></a> <a class="link-dark" href="https://github.com/d-despas"><i class="bi bi-github"></i></a></li>
                 </ul>
             </div>
             <nav id="navbar" class="navbar sticky-top navbar-light bg-light flex-column align-items-stretch p-3 shadow d-none d-md-flex" style="top: 51px;">
