favicon + language / IT update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link href="css/style.css" rel="stylesheet">
     <title>Damien Despas - Curriculum Vitae</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 
 <body>
@@ -232,10 +233,9 @@
             <p>&emsp;Vice-Président chargé de la Communication (2005-2007)<br>
                 &emsp;Webmaster (2004-2005)</p><br>
             <h4 id="scrollspyHeading7">DIVERS</h4><br>
-            <p><strong>Langues :</strong> Français (langue maternelle), Anglais (quite well), Allemand (ein
-                bisschen).<br>
-                <strong>Informatique :</strong> Java, PHP, HTML, CSS, JavaScript, Groovy, Python, R, MySQL, MongoDB,
-                HSQLDB, Eclipse, Git, Docker, Confluence, Jira, Bootstrap, jQuery.<br>
+            <p><strong>Langues :</strong> Français (langue maternelle), Anglais (Cambridge English: C1 Advanced - 12/2021), Allemand (B1/B2).<br>
+                <strong>Informatique :</strong> Java, PHP, HTML, CSS, JavaScript, Groovy, Python, R, MySQL, Microsoft SQL Server, MongoDB,
+                HSQLDB, SQLite, Eclipse, Git, Docker, Visual Studio Code, Confluence, Jira, Bootstrap, jQuery.<br>
                 <strong>Sport :</strong> Course à pied, Tennis, Danse (Claquettes, Be Bop, Lindy Hop, Charleston).<br>
                 <strong>Loisirs :</strong> Astronomie, Astrophysique, Guitare classique, Piano.
             </p><br>
