Scrollspy offset fix

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </nav>
         </div>
         <div class="col-10 offset-1 col-md-8 offset-md-0" data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" tabindex="0"><br>
-            <h4 id="scrollspyHeading1">FORMATION</h4>
+            <h4 class="section-anchor" id="scrollspyHeading1">FORMATION</h4>
             <br>
             <h6><span class="text-danger">2022-actuellement :</span> Post-Graduate Certificate - Computer Science</h6>
             <p>&emsp;University of London</p>
@@ -133,7 +133,7 @@
             </h6>
             <p>&emsp;Lycée Marcelin Berthelot (Châtellerault)</p>
             <br>
-            <h4 id="scrollspyHeading2">FONCTIONS</h4>
+            <h4 class="section-anchor" id="scrollspyHeading2">FONCTIONS</h4>
             <br>
             <h6><span class="text-info">2021-actuellement :</span> Senior Medical Knowledge Engineer | Technology Lead
                 HIS Kreuzlingen Site</h6>
@@ -173,7 +173,7 @@
             <p>&emsp;Hôpital Haut-Lévêque - Pr. H. de Verneuil - Pr. P. Derache (CHU de Bordeaux)</p>
             <h6><span class="text-info">2006-2010 :</span> Externe en Médecine</h6>
             <p>&emsp;Hôpital Jean-Bernard (CHU de Poitiers)</p><br>
-            <h4 id="scrollspyHeading3">PARCOURS RECHERCHE</h4><br>
+            <h4 class="section-anchor" id="scrollspyHeading3">PARCOURS RECHERCHE</h4><br>
             <h6><span class="text-success">2012 :</span> Master 2 - Biologie Santé - Nutrition Humaine et Santé, Mention
                 AB
             </h6>
@@ -198,7 +198,7 @@
                 Poitiers)</h6>
             <h6><span class="text-success">2004-2005 :</span> UE Biologie Moléculaire de la Cellule (Université de
                 Poitiers)</h6><br>
-            <h4 id="scrollspyHeading4">ENSEIGNEMENT</h4><br>
+            <h4 class="section-anchor" id="scrollspyHeading4">ENSEIGNEMENT</h4><br>
             <h6><span class="text-warning">2011-2013 :</span> Tutorat Internat Pharmacie (UFR Pharmacie - Victor Segalen
                 Bordeaux II)</h6>
             <p>&emsp;Biochimie (14h de cours et 2h d’examens)</p>
@@ -209,7 +209,7 @@
             <h6><span class="text-warning">2004-2005 :</span> Tuteur de Physiologie (UFR Médecine Pharmacie - Poitiers)
             </h6>
             <p>&emsp;24h de cours et 9h d’examens</p><br>
-            <h4 id="scrollspyHeading5">PUBLICATIONS</h4><br>
+            <h4 class="section-anchor" id="scrollspyHeading5">PUBLICATIONS</h4><br>
             <p>D. Despas. Insuffisance de renseignements cliniques sur les prescriptions de biologie médicale : points
                 de vue croisés des prescripteurs et des biologistes. Médecine humaine et pathologie. 2015.
                 <a href="https://dumas.ccsd.cnrs.fr/dumas-01223401"
@@ -220,7 +220,7 @@
                 est-il un bon marqueur de la stéatose ? Diabetes & Metabolism. Volume 39, Supplement 1, 2013, Page A90.
                 ISSN 1262-3636. <a href="https://doi.org/10.1016/S1262-3636(13)72005-6"
                     target="_blank">https://doi.org/10.1016/S1262-3636(13)72005-6</a></p><br>
-            <h4 id="scrollspyHeading6">PARCOURS ASSOCIATIF</h4><br>
+            <h4 class="section-anchor" id="scrollspyHeading6">PARCOURS ASSOCIATIF</h4><br>
             <h6><span class="text-info">2013-2015 :</span> Syndicat des Internes en Médecine Générale d’Aquitaine
                 (S.I.M.G.A.)</h6>
             <p>&emsp;Trésorier (2013-2015)</p>
@@ -232,7 +232,7 @@
                 (C.R.E.M.)</h6>
             <p>&emsp;Vice-Président chargé de la Communication (2005-2007)<br>
                 &emsp;Webmaster (2004-2005)</p><br>
-            <h4 id="scrollspyHeading7">DIVERS</h4><br>
+            <h4 class="section-anchor" id="scrollspyHeading7">DIVERS</h4><br>
             <p><strong>Langues :</strong> Français (langue maternelle), Anglais (Cambridge English: C1 Advanced - 12/2021), Allemand (B1/B2).<br>
                 <strong>Informatique :</strong> Java, PHP, HTML, CSS, JavaScript, Groovy, Python, R, MySQL, Microsoft SQL Server, MongoDB,
                 HSQLDB, SQLite, Eclipse, Git, Docker, Visual Studio Code, Confluence, Jira, Bootstrap, jQuery.<br>
