Add 3M CTEI Award

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             <h6><span class="text-info">2006-2010 :</span> Externe en Médecine</h6>
             <p>&emsp;Hôpital Jean-Bernard (CHU de Poitiers)</p><br>
             <h4 class="section-anchor" id="scrollspyHeading3">PARCOURS RECHERCHE</h4><br>
+            <h6><span class="text-success">2020 :</span> 3M Circle of Technical Excellence and Innovation Award - Winner Individual Category</h6>
             <h6><span class="text-success">2012 :</span> Master 2 - Biologie Santé - Nutrition Humaine et Santé, Mention
                 AB
             </h6>
